optimize InMemoryBookingRepository by using Map and unmodifiableList